@@ -508,3 +508,4 @@ void DebugRecv(LPCSTR pszOpcode, const CAddress& IP, uint16 port);
 void DebugSend(LPCSTR pszOpcode, const CAddress& IP, uint16 port);
 CString ipstr(const CAddress& IP);
 //<<< WiZaRd::IPv6 [Xanatos]
+ULONG GetBestInterfaceIP(const ULONG dest_addr); //>>> WiZaRd::Find Best Interface IP [netfinity]
