@@ -232,3 +232,5 @@ XXXXYYZZ:
  * green skull: good score (> 2.0)
 - removed SOCKS4(a) proxy support, no one uses them [Tuxman]
 ~ changed references in mdump from "eMule" to "kMule" [WiZaRd]
++ added "waiting" user column to shared files window [WiZaRd]
++ Make UPnP work on interfaces with secondary IPs - original by Netfinity [WiZaRd]
